# COMMONTOOLS

./: .gitignore  CLAUDE.md  Cargo.toml  qualifier-questions.md  qualifier.md  reference.rs
.playwright-mcp/: page-2026-07-13T10-32-55-163Z.yml
docs/: review-findings-2026-07-16.md
sessions/: .resume-prompt.md  2026-07-13-qualifier-docker-dashboard.md  2026-07-13-qualifier-phase1-build.md  SESSION-RESUME.md
src/: chart.rs  checker.rs  clippy.rs  compat_chart.rs  compat_md.rs  detect.rs  docker.rs  exec.rs  fallow.rs  history.rs  main.rs  metrics.rs  summary.rs  vitest.rs
templates/: quality.html
