[package]
name = "qualifier"
version = "0.1.0"
edition = "2021"
description = "Universal project quality dashboard — detect, run, report"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
glob = "0.3"
regex = "1"
sha2 = "0.10"
hex = "0.4"
